Pipeline build stage

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,20 +1,29 @@
+stages:
+  - build
+  - test
+  - deploy
+  
 gcc-c++11:
-  script: "CI/ci-linux.sh gcc C++11"
+  stage: build
+  script: "CI/ci-linux-build.sh gcc C++11"
   tags:
     - Linux
 
 clang-c++11:
-  script: "CI/ci-linux.sh clang C++11"
+  stage: build
+  script: "CI/ci-linux-build.sh clang C++11"
   tags:
     - Linux
 
 gcc-c++98:
-  script: "CI/ci-linux.sh gcc C++98"
+  stage: build
+  script: "CI/ci-linux-build.sh gcc C++98"
   tags:
     - Linux
 
 clang-c++98:
-  script: "CI/ci-linux.sh clang C++98"
+  stage: build
+  script: "CI/ci-linux-build.sh clang C++98"
   tags: 
     - Linux
 
