Fix MSVC Python compilation detection
PYTHON_WORKING_DIR must be the same binary location as specified for
try_compile.

--- a/src/Python/CMakeLists.txt
+++ b/src/Python/CMakeLists.txt
@@ -59,11 +59,7 @@ IF(OPENMESH_BUILD_PYTHON_BINDINGS)
 
 				IF(PYTHONINTERP_FOUND)
 					
-					IF(MSVC)
-						SET(PYTHON_WORKING_DIR "${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_TRY_COMPILE_CONFIGURATION}")
-					ELSE()
-						SET(PYTHON_WORKING_DIR "${CMAKE_CURRENT_BINARY_DIR}")
-					ENDIF()
+					set (PYTHON_WORKING_DIR ${CMAKE_CURRENT_BINARY_DIR})
 					
 					EXECUTE_PROCESS(
 						COMMAND ${PYTHON_EXECUTABLE} -c "from example import *; greet(); planet = World()"
