Updated output directories for python.

--- a/src/Python/Example/CMakeLists.txt
+++ b/src/Python/Example/CMakeLists.txt
@@ -17,6 +17,20 @@ SET_TARGET_PROPERTIES(
 	RELEASE_POSTFIX ""
 )
 
+SET(OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/python/)
+FILE(MAKE_DIRECTORY ${OUTPUT_DIRECTORY})
+
+SET_TARGET_PROPERTIES(example PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
+SET_TARGET_PROPERTIES(example PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
+SET_TARGET_PROPERTIES(example PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${OUTPUT_DIRECTORY})
+
+FOREACH(CONFIG ${CMAKE_CONFIGURATION_TYPES})
+	STRING(TOUPPER ${CONFIG} CONFIG)
+	SET_TARGET_PROPERTIES(example PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${CONFIG} ${OUTPUT_DIRECTORY})
+	SET_TARGET_PROPERTIES(example PROPERTIES LIBRARY_OUTPUT_DIRECTORY_${CONFIG} ${OUTPUT_DIRECTORY})
+	SET_TARGET_PROPERTIES(example PROPERTIES ARCHIVE_OUTPUT_DIRECTORY_${CONFIG} ${OUTPUT_DIRECTORY})
+ENDFOREACH()
+
 IF(APPLE)
 	SET_TARGET_PROPERTIES(example PROPERTIES SUFFIX ".so")
 	IF (NOT (CMAKE_MAJOR_VERSION LESS 3))
